Fix horizontal scrolling issue

--- a/frontend/src/pages/landing/LandingPage.scss
+++ b/frontend/src/pages/landing/LandingPage.scss
@@ -76,6 +76,9 @@
         background-size: 4px 50px;
     }
 
-    margin-left: 1.5em;
-    margin-right: 1.5em;
+    .margin-text {
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+        overflow-x: hidden;
+    }
 }
